pos-fixed bug fixed on mobile chrome

--- a/source/css/modules/_header.scss
+++ b/source/css/modules/_header.scss
@@ -203,7 +203,8 @@ footer{
             @include absolute;
             visibility: hidden;
             opacity: 0;
-            bottom: 0;
+            height: 100%;
+            height: 100vh;
             right: 0;
             position:fixed;
             z-index: 10;
